# tapestry

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  RULES.md
.github/workflows/: ci.yml
extension/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.content.config.ts  vitest.config.ts
extension/public/: preferences.html  sidebar.html
extension/scripts/: build-manifest.ts
extension/src/: app.css  manifest-generator.ts  native-host-generator.ts
extension/src/background/: background.test.ts  background.ts  messages.test.ts  messages.ts
extension/src/content/: content.test.ts  content.ts
extension/src/preferences/: Preferences.svelte  Preferences.test.ts  main.ts
extension/src/shared/: connection.test.ts  connection.ts  constants.ts  debounce.test.ts  debounce.ts  messages.test.ts  messages.ts  mount.test.ts  mount.ts  requestId.test.ts  settings.test.ts  settings.ts
extension/src/shared/components/: ConnectionStatus.svelte  ConnectionStatus.test.ts
extension/src/sidebar/: Sidebar.svelte  Sidebar.test.ts  main.ts  types.ts
extension/src/sidebar/components/: MarkdownOutput.svelte  MarkdownOutput.test.ts  PatternSelector.svelte  PatternSelector.test.ts
extension/src/test/: setup.ts
host/: Cargo.toml
host/examples/: interactive_client.rs  simple_passthrough.rs
host/src/: codec.rs  fabric.rs  handlers.rs  lib.rs  main.rs
host/tests/: integration_test.rs
